# gpt

./: .gitignore
backend/: Dockerfile  pyproject.toml  vercel.json
backend/filegpt_backend/: .gitignore  manage.py
backend/filegpt_backend/chat/: llm.py  models.py  serializers.py  urls.py  views.py
backend/filegpt_backend/filegpt_backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/filegpt_backend/files/: embeddings.py  file_processor.py  models.py  serializers.py  urls.py  utils.py  views.py
filegpt-frontend/: package-lock.json  package.json
filegpt-frontend/src/: middleware.ts
filegpt-frontend/src/app/: layout.tsx  page.tsx
filegpt-frontend/src/app/api/chat/: route.ts
filegpt-frontend/src/app/chat/[chatId]/: page.tsx
filegpt-frontend/src/app/sign-in/[[...sign-in]]/: page.tsx
filegpt-frontend/src/components/: ChatComponent.tsx  ChatSideBar.tsx  FileUpload.tsx  MessageList.tsx
filegpt-frontend/src/lib/: AxiosRequests.ts
